plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'hongs.community'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'

	// db
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	testImplementation 'org.springframework.security:spring-security-test'

	// StringEscapeUtils | html tag substitution
	// https://mvnrepository.com/artifact/org.apache.commons/commons-text
	 implementation 'org.apache.commons:commons-text:1.10.0'

	// log console
	implementation 'org.jodd:jodd-core:5.3.0'

	// xss
	 implementation 'commons-io:commons-io:2.11.0'		// https://mvnrepository.com/artifact/commons-io/commons-io
	 implementation 'org.owasp.encoder:encoder:1.2.3'	// https://mvnrepository.com/artifact/org.owasp.encoder/encoder

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	// tus
	implementation 'me.desair.tus:tus-java-server:1.0.0-3.0'

	// mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// oauth2 login
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// validation
	// implementation 'org.springframework.boot:spring-boot-starter-validation'

	// properties 암호화
	 implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
}

tasks.named('test') {
	useJUnitPlatform()
}
